css/main.css
.navigation-bar{
    display: flex;
    height: 100px;
    background-color: #FFFFFF;
    box-shadow: 0px 3px 25px darkgray;
    justify-content: space-between;
}

.nav-logo{
    margin-top: 12px;
    height: 80px;
}

header {
    display: flex;
    justify-content: flex-end;
}

.menu{
    font-weight: bold;
    margin-top: 35px;
}

.burger-links{
    margin-bottom: 30px;
    font-weight: bold;
}

.menu li{
    list-style-type: none;
}

/* Меню, которое будет появляться */
.menu-burger {
    position: fixed;
    padding-top: 100px;
    width: 100%;
    height: 100%;
    background: #FFF;
    transform: translateX(-100%);
    transition: transform 0.5s;
}

.menu-burger.active {
    transform: translateX(0);
}

a.links{
    color: #000!important;
    margin-right: 20px;
    text-decoration: none!important;
}

.slider-img{
    width: 90%;
}

.main-text{
    margin-top: 20%;
    text-align: center;
}


.features-block{
    margin-top: 50px!important;
}

.icons{
    width: 50px;
}

.hide{
    display: none;
}

.show{
    display: unset;
}

@media (max-device-width: 1400px) {
    .main-text{
        margin-top: 15%;
    }
}

@media (max-device-width: 1200px) {
    .main-text{
        margin-top: 10%;
    }
}

@media (max-device-width: 991px) {
    .main-text{
        margin-top: 0px;
    }

    .menu{
        display: none;
    }

    /* Гамбургер иконка */
    .menu-btn {
        margin-top: 30px;
        margin-right: 30px;
        width: 30px;
        height: 30px;
        position: relative;
        z-index:2;
    }

    .menu-btn span {
        width: 30px;
        height: 5px;
        position: absolute;
        top: 30px;
        left: 50%;
        transform: translate(-50%, -50%);
        background-color: #222222;
        transition: all 0.5s;
    }

    .menu-btn span:nth-of-type(2) {
        top: calc(50% - 5px);
    }
    .menu-btn span:nth-of-type(3) {
        top: calc(50% + 5px);
    }

    /* Меняем гамбургер иконку, когда меню открыто */
    .menu-btn.active span:nth-of-type(1) {
        display: none;
    }
    .menu-btn.active span:nth-of-type(2) {
        top: 50%;
        transform: translate(-50%, 0%) rotate(45deg);
    }
    .menu-btn.active span:nth-of-type(3) {
        top: 50%;
        transform: translate(-50%, 0%) rotate(-45deg);
    }

    .menu-burger li {
        list-style-type: none;
    }

}

